library-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: library
  labels:
    app: library
spec:
  selector:
    matchLabels:
      app: library
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: library
    spec:
      containers:
      - name: library
        image: localhost:5000/cloud_fum_library:latest
        ports:
        - containerPort: 8000
        volumeMounts:
        - mountPath: "/var/lib/mysql"
          name: lib_db
      volumes:
      - name: lib_db
        persistentVolumeClaim:
          claimName: pvc-library
---
apiVersion: v1
kind: Service
metadata:
  name: library-service
spec:
  selector:
    app: library-management
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8000
