userdb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userdb-deployment
  labels:
    app: userdb
spec:
  selector:
    matchLabels:
      app: userdb
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: userdb
    spec:
      containers:
      - name: userdb
        image: localhost:5000/mysql:5.7.22
        ports:
        - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: userdb-service
spec:
  selector:
    app: userdb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
